<resources>
    <string name="app_name">AndroidFinal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="favRecipes">Favorite Recipes</string>
    <string name="card">card</string>
    <string name="test">test</string>
    <string name="title">Title</string>
    <string name="back">back</string>
    <string name="spicy">Spicy</string>
    <string name="sweet">Sweet</string>
    <string name="view">View</string>
    <string name="user_email_example_com">user.email@example.com</string>
    <string name="profile">Profile</string>
    <string name="_4_5">⭐ 4.5</string>
    <string name="difficulty">Difficulty:</string>
    <string name="salty_category">Salty Category</string>
    <string name="spicy_category">Spicy Category</string>
    <string name="sweet_category">Sweet Category</string>
    <string name="indian_cuisine">Indian Cuisine</string>
    <string name="favrecepies">Favorite Recipes</string>
    <string name="categories">Categories</string>
    <string name="recipe_types">Recipe types</string>
    <string name="home">Home</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="instructions">Instructions:</string>
    <string name="area_spain">Area: Spain</string>
    <string name="category_spicy">Category: Spicy</string>
    <string name="recipe_image">recipe_image</string>
    <string name="dashcook">DashCook</string>
</resources>