<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".UI.register.screen.RegisterFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/topDecor"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/img"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:alpha="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:elevation="15dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:letterSpacing="0.02"
        android:text="@string/create_account"
        android:textColor="#2E007C"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topDecor" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="14dp"
        android:layout_height="11dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_4"
        app:layout_constraintBottom_toBottomOf="@id/emailField"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintTop_toTopOf="@id/emailField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailField"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="Email"
        android:letterSpacing="0.01"
        android:paddingStart="41dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@id/createAccountText"
        app:layout_constraintStart_toStartOf="@id/createAccountText"
        app:layout_constraintTop_toBottomOf="@id/createAccountText"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_5"
        app:layout_constraintBottom_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toTopOf="@id/passwordField" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/eyeIcon0"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="14dp"
        android:elevation="8dp"
        android:src="@drawable/eye_icon"
        app:layout_constraintBottom_toBottomOf="@id/passwordField"
        app:layout_constraintEnd_toEndOf="@id/passwordField"
        app:layout_constraintTop_toTopOf="@id/passwordField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordField"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:letterSpacing="0.01"
        android:paddingStart="41dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@id/emailField"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_5"
        app:layout_constraintBottom_toBottomOf="@id/passwordRepeatField"
        app:layout_constraintStart_toStartOf="@id/passwordRepeatField"
        app:layout_constraintTop_toTopOf="@id/passwordRepeatField" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/eyeIcon1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="14dp"
        android:elevation="8dp"
        android:src="@drawable/eye_icon"
        app:layout_constraintBottom_toBottomOf="@id/passwordRepeatField"
        app:layout_constraintEnd_toEndOf="@id/passwordRepeatField"
        app:layout_constraintTop_toTopOf="@id/passwordRepeatField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordRepeatField"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:letterSpacing="0.01"
        android:paddingStart="41dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/button_rounded_corners"
        android:backgroundTint="#D7B8FF"
        android:text="@string/register"
        android:textColor="#4D017A"
        android:letterSpacing="0.05"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/passwordRepeatField"
        app:layout_constraintStart_toStartOf="@id/passwordRepeatField"
        app:layout_constraintTop_toBottomOf="@id/passwordRepeatField" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="-110dp"
        android:alpha="0.8"
        android:src="@drawable/img_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>